# BALL-compliance-ai

./: .gitignore  agent.py  backend.Dockerfile  benchmark.py  chunking.py  database.py  docker-compose.yml  embedding_service.py  frontend.Dockerfile  ingest.py  load_test.js  models.py  nginx.conf  pyproject.toml  retriever.py  test_qdrant.py  vector_ingest.py
app/: main.py
app/api/: auth.py  main.py  routes.py
app/core/: logger.py  security.py
app/db/: models.py  session.py
app/schemas/: audit.py  auth.py
app/services/: cache.py  compliance_agent.py  embedding_service.py  retriever.py  telemetry.py  vector_store.py
ball-frontend/: index.html  package-lock.json  package.json
ball-frontend/src/: App.tsx
